src/app/header/styles/_header.scss
#header {
    display: block;
    width: 100%;
    height: $header-height-desktop;
    -webkit-backface-visibility: hidden;
    -webkit-transform-style: preserve-3d;
    @media (max-width: 767px) {
        height: $header-height-mobile;
    }
    background-color: #e9e9e9;
    position: relative;
    z-index: 2;

    .navbar, .container-fluid {
        border: none;
        border-radius: 0;
        margin: 0;
        padding: 0;
        height: 100%;
        width: 100%;
    }
}

.header-mainbar {
}

.header-burger {
    padding: 1em;
    margin: 4px;
    .icon-bar {
        background: $primary-color;
        transition: all 0.2s ease;
        @include transitionfuse;

        &:nth-child(2) {
            transform: translateY(6px) rotate(45deg);
        }
        &:nth-child(3) {
            transform: rotate(-45deg);
        }
        &:last-child {
            opacity: 0;
        }
    }
    &.collapsed .icon-bar {
        transform: none;
        opacity: 1;
    }
}

.header-map-switch {
    float: right;
    height: 3em;
    width: 3em;
    padding: 0.7em;
    margin: 4px;
    color: $primary-color;
    @media (min-width: 768px) {
        display: none;
    }
    img, svg {
        max-height: 100%;
        width: auto;
    }
}



.header-title-link {
    height: 100%;
    display: flex;

    line-height: $header-height-desktop;
    @media (max-width: 767px) {
        line-height: $header-height-mobile;
        right: 120px;
    }
}

.header-title {
    display: inline-block;
    font-family: serif;
    font-style: italic;
    color: $dark-grey;
    margin: 0;

    > h1 {
        margin: 0;
        display: inline-block;
        vertical-align: middle;
    }

    @media (max-width: 767px) {
        display: none;
    }
}

.header-logo {
    height: $header-height-desktop;
    float: left;
    vertical-align: middle;
    @media (max-width: 767px) {
        height: $header-height-mobile;
    }
}

.header-links-container {

    margin: 0;
    padding: 0;

    @media (max-width: 767px) {
        background: white;
        padding: 0;
        width: 100%;
        position: absolute;
        .container-fluid > & {
             margin: 0;
        }

        top: $header-height-mobile;
        height: auto;
    }
}

.header-links {
    height: 100%;
    line-height: $header-height-desktop;
    &.navbar-right {
        margin-right: 0;
    }
    @media (max-width: 767px) {
        margin: 0;
        line-height: $header-height-mobile;
    }

    .glyphicon,
    .fa {
        color: inherit;
        font-size: 1.1em;
        line-height: 1.1em;
        cursor: pointer;
    }

    a {
        color: $dark-grey;
        @media (max-width: 992px) {
            padding-left: 10px;
            padding-right: 10px;
        }

        &:hover,
        &:focus {
            color: $primary-color;
            > .glyphicon,
            > .fa  {
                color: $primary-color;
            }
        }
    }
    .header-link {
        line-height: normal;

        > a {
            padding-top: 35px;
            padding-bottom: 35px;
            @media (max-width: 767px) {
                padding: 1em 2em;
            }
        }
        &:hover,
        &:focus {
            background-color: $light-grey;
            > a,
            > .glyphicon,
            > .fa  {
                color: $primary-color;
            }
        }
    }

    .dropdown-menu {
        padding: 0;
        max-height: calc(100vh - #{$header-height-desktop});
        @media (max-width: 767px) {
            max-height: calc(100vh - #{$header-height-mobile});
        }
        a {
            padding-top: 15px;
            padding-bottom: 15px;
        }
        > .active > a {
            background-color: $dark-grey;
        }
        &.scroll {
            overflow-x: hidden;
            overflow-y: auto;
        }
    }
}

